tests/functional/lang/eval-fail-mul-2.err.exp
error:
       … while calling the 'mul' builtin
         at /pwd/lang/eval-fail-mul-2.nix:1:1:
            1| builtins.mul 1 "foo"
             | ^
            2|

       … while evaluating the second argument of the multiplication

       error: expected an integer but found a string: "foo"
